# LLMserver

./: README.md  bench  pyproject.toml  pytest.ini
gateway/: app.py
llm/: capabilities.py  metrics.py  registry.py  runtime.py
llm/adapters/: __init__.py  base.py  common.py  crewai.py  langchain.py  llamaindex.py
model/: model-settings.json  requirements.txt
server/: capabilities.py  config.py  io_utils.py  observability.py  registry.py  reliability.py  reloader.py  runtime.py
server/adapters/: __init__.py  langchain.py  llama_index.py
server/flavors/: langchain.py  llama_index.py
server/memory/: __init__.py  base.py  inproc.py
server/models/: __init__.py  resolvers.py
tests/: test_adapters_langchain.py  test_adapters_llama.py  test_config.py  test_config_validation.py  test_gateway_errors_and_heartbeat.py  test_gateway_unit.py  test_io_utils.py  test_langchain_strategy.py  test_llama_strategy.py  test_llama_strategy_more.py  test_observability_init.py  test_reliability.py  test_reliability_gate.py  test_reloader.py  test_reloader_behaviour.py  test_resolver_watch.py  test_runtime_paths.py  test_runtime_predict_and_stream.py
